examples/test/testpolicy13998.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13998
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key27: value34
      key29: value48
      key31: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value37
          key32: value26
          key34: value23
